--- a/package.json
+++ b/package.json
@@ -21,7 +21,21 @@
     "node": ">= 6.9.4"
   },
   "dependencies": {
-    "jquery": "^3.1.1"
+    "axios": "^0.15.3",
+    "es6-promise": "^4.1.0",
+    "jquery": "^3.1.1",
+    "node-sass": "^4.5.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-redux-toastr": "^5.0.0",
+    "react-router": "^4.0.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.6.0",
+    "redux-router": "^2.1.2",
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.9",
+    "semantic-ui-react": "^0.67.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -29,9 +43,26 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "cross-env": "^3.2.3",
+    "css-loader": "^0.27.3",
     "eslint": "^3.17.1",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-react": "^6.10.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "gulp": "^3.9.1",
+    "img-loader": "^1.3.1",
+    "json-loader": "^0.5.4",
+    "jsx-loader": "^0.13.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
+    "transfer-webpack-plugin": "^0.1.4",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   }
 }
