--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.15.3",
     "es6-promise": "^4.1.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
