--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router": "^4.0.0",
     "react-router-redux": "^4.0.8",
     "react-slick": "^0.14.8",
+    "react-stack-grid": "^0.2.0",
     "react-stonecutter": "^0.3.4",
     "redux": "^3.6.0",
     "redux-router": "^2.1.2",
