--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.9",
     "semantic-ui-react": "^0.67.1",
-    "slick-carousel": "^1.6.0"
+    "slick-carousel": "^1.6.0",
+    "vegas": "^2.4.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
