--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "autoresponsive-react": "^1.1.11",
     "axios": "^0.15.3",
     "es6-promise": "^4.1.0",
+    "install": "^0.10.1",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "masonry-layout": "^4.1.1",
     "node-sass": "^4.5.0",
+    "npm": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-masonry-component": "^5.0.5",
+    "react-masonry-layout": "^0.2.3",
+    "react-pinterest": "^1.2.0",
     "react-redux": "^5.0.3",
     "react-redux-toastr": "^5.0.0",
     "react-router": "^4.0.0",
@@ -38,6 +42,7 @@
     "react-slick": "^0.14.8",
     "react-stack-grid": "^0.2.0",
     "react-stonecutter": "^0.3.4",
+    "react-with-important-style": "^0.2.2",
     "redux": "^3.6.0",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
