--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "babel-loader": "^6.4.0",
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^3.2.3",
