--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wp-experiensa",
-  "version": "0.8.2",
+  "version": "0.8.4",
   "description": "WP plugin to add tourist information to your website",
   "main": "main.js",
   "scripts": {
@@ -41,9 +41,11 @@
     "react-router-redux": "^4.0.8",
     "react-slick": "^0.14.8",
     "react-stack-grid": "^0.2.0",
+    "react-stepzilla": "^4.6.3",
     "react-stonecutter": "^0.3.4",
     "react-with-important-style": "^0.2.2",
     "redux": "^3.6.0",
+    "redux-form": "^7.0.4",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.9",
@@ -60,6 +62,7 @@
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-1": "^6.24.1",
