--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "es6-promise": "^4.1.0",
     "install": "^0.10.1",
     "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1",
     "lodash": "^4.17.4",
     "masonry-layout": "^4.1.1",
     "node-sass": "^4.5.0",
