--- a/package.json
+++ b/package.json
@@ -29,10 +29,17 @@
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.4",
     "masonry-layout": "^4.1.1",
+    "moment": "^2.19.1",
     "node-sass": "^4.5.0",
     "npm": "^4.5.0",
+    "prop-types": "^15.6.0",
+    "rc-slider": "^8.3.3",
+    "rc-tooltip": "^3.5.0",
     "react": "^15.4.2",
+    "react-async-script": "^0.9.1",
+    "react-datepicker": "^0.56.0",
     "react-dom": "^15.4.2",
+    "react-google-recaptcha": "^0.9.7",
     "react-masonry-component": "^5.0.5",
     "react-masonry-layout": "^0.2.3",
     "react-pinterest": "^1.2.0",
@@ -63,6 +70,7 @@
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
