--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^15.4.2",
     "react-async-script": "^0.9.1",
     "react-datepicker": "^0.56.0",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^15.4.2",
     "react-google-recaptcha": "^0.9.7",
     "react-masonry-component": "^5.0.5",
@@ -52,6 +53,7 @@
     "react-stack-grid": "^0.2.0",
     "react-stepzilla": "^4.6.3",
     "react-stonecutter": "^0.3.4",
+    "react-window-size": "^1.0.1",
     "react-with-important-style": "^0.2.2",
     "redux": "^3.6.0",
     "redux-form": "^7.0.4",
