--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rc-slider": "^8.3.3",
     "rc-tooltip": "^3.5.0",
     "react": "^15.4.2",
+    "react-absolute-grid": "^3.0.0",
     "react-async-script": "^0.9.1",
     "react-datepicker": "^0.56.0",
     "react-dimensions": "^1.3.1",
