--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "img-loader": "^1.3.1",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "react-limited-infinite-scroll": "^2.0.4",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.13.2",
     "transfer-webpack-plugin": "^0.1.4",
